src/snapshots/zeek_language_server__complete__test__snippet.snap
---
source: src/complete.rs
expression: result
---
Some(
    [
        CompletionItem {
            label: "record",
            label_details: None,
            kind: Some(
                Snippet,
            ),
            detail: None,
            documentation: None,
            deprecated: None,
            preselect: None,
            sort_text: None,
            filter_text: None,
            insert_text: Some(
                "type ${1:Name}: record {\n\t${2:field_name}: ${3:field_type};\n};",
            ),
            insert_text_format: Some(
                Snippet,
            ),
            insert_text_mode: None,
            text_edit: None,
            additional_text_edits: None,
            command: None,
            commit_characters: None,
            data: None,
            tags: None,
        },
    ],
)
